# igclib

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  TODO.md  makefile
.github/workflows/: docker.yml
cmake/: FindGeographicLib.cmake
docker/: Dockerfile.bare  Dockerfile.node  Dockerfile.slim
include/cppoptlib/: meta.h
include/igclib/: airspace.hpp  box.hpp  cache.hpp  candidate.hpp  config.hpp  config.hpp.in  distance.hpp  errors.hpp  flight.hpp  geo.hpp  geometry.hpp  geopoint.hpp  igclib.hpp  json.hpp  logging.hpp  pointcollection.hpp  pointset.hpp  race.hpp  route.hpp  routedist.hpp  task.hpp  time.hpp  turnpoint.hpp  util.hpp  xc_optimization.hpp  xcinfo.hpp  xcopt.hpp  xcscore.hpp  zone.hpp
include/optimization/: bfgs.hpp
src/: CMakeLists.txt  cache.cpp  main.cpp  util.cpp
src/airspace/: airspace.cpp  zone.cpp
src/core/: airspace.cpp  flight.cpp
src/flight/: flight.cpp  raceflight.cpp
src/geo/: geometry.cpp  geopoint.cpp  point.cpp  pointcollection.cpp  pointset.cpp  time.cpp  zone.cpp
src/logging/: logging.cpp
src/race/: race.cpp
src/task/: ffvl_task.cpp  ffvltask.cpp  pwca_task.cpp  route.cpp  routedist.cpp  task.cpp  turnpoint.cpp  xctask.cpp
src/time/: igctime.cpp  time.cpp  xctracktime.cpp
src/util/: itertools.cpp  util.cpp
src/xc/: candidate.cpp  xc_optimization.cpp  xcinfo.cpp  xcopt.cpp  xcscore.cpp
tests/: CMakeLists.txt  test_airspace_openair.cpp  test_igclib_airspace_openair..cpp  test_igclib_igcpoint.cpp  test_igclib_igctime.cpp  test_igclib_time.cpp  test_igclib_xc.cpp  test_igcpoint.cpp  test_igctime.cpp  test_xc.cpp  xc_test.cpp
tests/data/airspace/: france_05_19.txt  france_08_19.txt  reno.txt  tricky_asp_france.txt
tests/data/race/1_all/: 0011.igc  0016.igc  0027.igc  0029.igc  0030.igc  0034.igc  0035.igc  0039.igc  0046.igc  0049.igc  0050.igc  0057.igc  0061.igc  0072.igc  0093.igc  0094.igc  0110.igc  0115.igc  0119.igc  0123.igc  0147.igc  0174.igc  0202.igc  0203.igc  0206.igc  0222.igc  0235.igc  0237.igc  0239.igc  0250.igc  0255.igc  0260.igc  0263.igc  0267.igc  0269.igc  0271.igc  0273.igc  0285.igc  0308.igc  0313.igc  (+76 more)
tests/data/race/1_small/: 0090.igc
tests/data/task/: ffvl_1.json  forged.json  pwca_brazil_2019_7.xctsk  xctrack_1.xctsk
tests/flights/: xc_col_agnel.igc
